terraform/network.tf
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "Main"
        Owner = var.service_name
    }
}

resource "aws_route_table" "rt1" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "Public"
    }
}

resource "aws_route_table_association" "rta1" {
    subnet_id = aws_subnet.subnet1.id
    route_table_id = aws_route_table.rt1.id
}

resource "aws_route_table_association" "rta2" {
    subnet_id = aws_subnet.subnet2.id
    route_table_id = aws_route_table.rt1.id
}

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = var.service_name
    }
}

resource "aws_subnet" "subnet1" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = var.availability_zone[0]

    tags = {
        Name = "Subnet1"
        Type = "Public"
    }
}

resource "aws_subnet" "subnet2" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.2.0/24"
    availability_zone = var.availability_zone[1]

    tags = {
        Name = "Subnet2"
        Type = "Public"
    }
}

data "aws_caller_identity" "current" {}

data "aws_route53_zone" "resume" {
    name = "justinthecloud.dev"
}

resource "aws_route53_record" "base" {
    zone_id = data.aws_route53_zone.resume.zone_id
    name = "justinthecloud.dev"
    type = "A"

    alias {
        name = aws_lb.current.dns_name
        zone_id = aws_lb.current.zone_id
        evaluate_target_health = true
    }
}
